lib/kube/shared/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $KUBE_APP-deployment
  namespace: $KUBE_NS
  labels:
    app: $KUBE_APP
    version: $GITHUB_SHA
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $KUBE_APP
  template:
    metadata:
      labels:
        app: $KUBE_APP
    spec:
      serviceAccountName: boilerplate-preview-deployment
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "boilerplate-mern-secrets"
      containers:
        - name: $KUBE_APP
          image: $KUBE_DEPLOYMENT_IMAGE
          imagePullPolicy: Always
          resources:
            requests:
              memory: '256Mi'
            limits:
              memory: '512Mi'
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          startupProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
